# SuperCalc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  LICENSE.txt  README.md  Super-Calc.sln  translations.hpp
.github/workflows/: build.yml
Super-Calc/: Super-Calc.vcxproj  Super-Calc.vcxproj.filters  main.cpp  mathoperation.hpp  mathtree.cpp  mathtree.hpp
include/SuperCalc/: editor.hpp  mathoperation.hpp  mathtree.hpp  translations.hpp
src/: editor.cpp  main.cpp  mathtree.cpp
